增加一个rpc调用，协调个机械臂进行抓取

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ Desktop/
 *.pyc
 ArmPi/Functions/__pycache__/ColorPalletizing.cpython-37.pyc
 ArmPi/Functions/__pycache__/ColorTracking.cpython-37.pyc
+*.cap
