--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,8 @@ CATKIN_IGNORE
 
 .profile
 
-.vscode/
+*.vscode/
+*.vscode-server/
 .config/
 .chche/*
 .cache/
@@ -86,3 +87,4 @@ Desktop/
 ArmPi/Functions/__pycache__/ColorPalletizing.cpython-37.pyc
 ArmPi/Functions/__pycache__/ColorTracking.cpython-37.pyc
 *.cap
+.dotnet/
