--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ ArmPi/Functions/__pycache__/ColorPalletizing.cpython-37.pyc
 ArmPi/Functions/__pycache__/ColorTracking.cpython-37.pyc
 *.cap
 .dotnet/
+ArmPi/test.log
+ArmPi/pythontest.py
